# FRE_RoboSenseAIRY

./: README.md
ground_filter_aaron/: package.xml  setup.cfg  setup.py
ground_filter_aaron/config/: filter_ground.yaml
ground_filter_aaron/ground_filter_aaron/: filter_ground.py
ground_filter_aaron/launch/: filter_ground.launch.py
ground_filter_aaron/src/: filter_ground.py
ground_segmentation/: CMakeLists.txt  package.xml
ground_segmentation/config/: point_visual.rviz
ground_segmentation/launch/: ground_segmentation.launch.py  ground_segmentation_bag.launch.py  ground_segmentation_headless.launch.py
ground_segmentation/src/: ground_segmentation_node.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ground_segmentation/lib/ground_segmentation/: ground_segmentation_node
install/ground_segmentation/share/ament_index/resource_index/parent_prefix_path/: ground_segmentation
install/ground_segmentation/share/ground_segmentation/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ground_segmentation/share/ground_segmentation/config/: ground_segmentation.yaml
install/ground_segmentation/share/ground_segmentation/launch/: ground_segmentation.launch.py  ground_segmentation_headless.launch.py
log/: latest_build
rslidar_sdk/: CMakeLists.txt
rslidar_sdk/config/: config.yaml
